v3 - Fix margins and image on mobile and tablet (#1056)

--- a/src/components/sections/employeeHighlight/employeeHighlight.module.css
+++ b/src/components/sections/employeeHighlight/employeeHighlight.module.css
@@ -9,8 +9,6 @@
 
   @media (max-width: 834px) {
     flex-direction: column;
-    margin-left: 2rem;
-    margin-right: 2rem;
   }
 }
 
@@ -25,6 +23,7 @@
 
   @media (max-width: 834px) {
     max-width: 60%;
+    margin: auto;
   }
 }
 
